@@ -4,7 +4,8 @@ Changelog
 1.2 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Fix JavaScript issues - use jQuery properly.
+  [jone]
 
 
 1.1 (2013-05-24)
